Thu Aug  1 22:13:39 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          RT16148 - reduce lock scope to avoid a deadlock by attempting
          to acquire the reactor and sample locks in different order on
          different threads.

Thu Jun 20 17:08:37 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:

          Allow configuration string for multicast default transport
          port to be w_char.

Tue Jun 18 22:15:41 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          Changed "DefaultMulticastGroup" configuration key to
          "InteropMulticastOverride" to indicate the semantics better.
          Added some documentation.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:

          Include a port number if the user does not supply one with the
          multicast group specification.  The default port added this way
          is 7401.
          Added some documentation.

        * tests/DCPS/RtpsDiscovery/rtps_disc_group.ini:

          Migrated the multicast groups used to the un-routed local
          groups (RFC 2365, Section 6.1).

Tue Jun 18 20:23:16 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/RTPS/Spdp.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Set TTL on the socket used for sending.

        * tests/DCPS/RtpsDiscovery/rtps_disc_group.ini:

          Change the TTL for each section so it can be identified when
          validating the tests.

Mon Jun 17 22:13:36 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          Actually save and use the configured TTL value.

        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:

          Account for the ACE_INET_Addr assumption that values without a